-suppression dans tous les fichiers html de la taille de l'icone fa-handshake-angle issue de font awesome; -suppression des propriétés du footer dans le fichier nav.scss pour les réunir dans le fichier container.scss; -suppression de la propriété align-items indiquée pour les cartes de restaurant dans la version tablette  car inutile.

--- a/main.css
+++ b/main.css
@@ -468,9 +468,6 @@ header {
 
 footer {
   position: relative;
-}
-
-footer {
   width: auto;
   height: auto;
   background-color: rgb(49, 49, 49);
@@ -762,7 +759,6 @@ footer {
 }
 @media all and (min-width: 767px) {
   .restaurant {
-    align-items: flex-end;
     width: 45%;
     margin: 0.2rem;
   }
