--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -43,6 +43,16 @@
     }
 }
 
-footer{
+footer {
     position:relative;
+    width: auto;
+    height: auto;
+    background-color: $colour-quartery;
+    padding: 1rem 0 1rem 0;
+
+    @include tablette-only {
+        display: flex;
+        justify-content: space-around;
+    }
 }
+
