--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,15 +1,3 @@
-footer {
-    width: auto;
-    height: auto;
-    background-color: $colour-quartery;
-    padding: 1rem 0 1rem 0;
-
-    @include tablette-only {
-        display: flex;
-        justify-content: space-around;
-    }
-}
-
 .nav {
     color: white;
     margin: $margin-elements;
